--- a/this will be deleted/package.json
+++ b/this will be deleted/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.2.2",
-    "jquery": "^3.6.1"
+    "bootstrap": "^5.2.2"
   }
 }
